# Nmber

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Application/include/: component.hpp  game.hpp  level.hpp
Application/map/: test.js  test.tmj
Application/shader/: test.glsl
Application/src/: application.cpp  game.cpp  level.cpp
CMake/: Findglfw3.cmake
Core/: CMakeLists.txt  sge.hpp
Core/include/: batch.hpp  buffer.hpp  buffer_layout.hpp  config.h  entity.hpp  matrix.hpp  matrix_transform.hpp  shader.hpp  texture.hpp  time.hpp  vector.hpp
Core/src/: buffer.cpp  buffer_layout.cpp  shader.cpp  texture.cpp
Dependencies/GLAD/include/GLAD/: glad.h
Dependencies/GLAD/src/: glad.c
